--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build:css": "postcss src/index.css -o dist/output.css"
   },
   "dependencies": {
+    "@react-hook/window-size": "^3.1.1",
     "@reduxjs/toolkit": "^2.5.0",
     "@tailwindcss/forms": "^0.5.9",
     "axios": "^1.7.9",
@@ -37,6 +38,6 @@
     "postcss": "^8.4.49",
     "postcss-cli": "^11.0.0",
     "tailwindcss": "^3.4.17",
-    "vite": "^6.0.4"
+    "vite": "^6.0.5"
   }
 }
