--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "@tailwindcss/forms": "^0.5.9",
     "axios": "^1.7.9",
     "formik": "^2.4.6",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "framer-motion": "^11.15.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.0.2",
