--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@tailwindcss/forms": "^0.5.9",
     "axios": "^1.7.9",
+    "firebase": "^11.1.0",
     "formik": "^2.4.6",
     "framer-motion": "^11.15.0",
     "react": "^18.2.0",
